# peptone-fit-model-Microorganisms-v2

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt  start.sh
.claude/: launch.json
.streamlit/: config.toml
app/: streamlit_app.py
config/: config.yaml
data/: composition_template.xlsx  신사업1팀 균주 리스트 (2024 ver.).xlsx
scripts/: score_debug.py  setup_kofamscan.sh
src/peptomatch/: __init__.py  blend_optimizer.py  cli.py  compare.py  composition_features.py  explain.py  genome_prior.py  io_loaders.py  kegg_client.py  kegg_pathway.py  kegg_viz.py  ko_annotator.py  media_config.py  ncbi_client.py  report_pdf.py  scoring.py  strain_db.py  taxonomy_priors.py  utils.py
